amyc/src/test/resources/amyc/parser/failing/ClassDefError2.amy
object ClassDef
  case class Foo extends Bar
end ClassDef
